@@ -1,8 +1,8 @@
-# core ext files
 require "savon/core_ext/object"
 require "savon/core_ext/string"
 require "savon/core_ext/symbol"
 require "savon/core_ext/datetime"
+require "savon/core_ext/array"
 require "savon/core_ext/hash"
 require "savon/core_ext/uri"
 require "savon/core_ext/net_http"
