@@ -1,0 +1,17 @@
+class Array
+
+  # Translates the Array into SOAP request compatible XML. See: Hash#to_soap_xml.
+  def to_soap_xml(key)
+    xml = Builder::XmlMarkup.new
+
+    each do |item|
+      case item
+        when Array, Hash then xml.tag!(key) { xml << item.to_soap_xml }
+        else                  xml.tag!(key) { xml << item.to_soap_value }
+      end
+    end
+
+    xml.target!
+  end
+
+end
