@@ -1,78 +1,81 @@
 class Hash
 
-  # Error message for missing :@inorder elements.
-  InOrderMissing = "Missing elements in :@inorder %s"
-
-  # Error message for spurious :@inorder elements.
-  InOrderSpurious = "Spurious elements in :@inorder %s"
-
-  # Returns the values from the 'soap:Body' element or an empty Hash
-  # in case the node could not be found.
+  # Returns the values from the soap:Body element or an empty Hash in case the soap:Body tag could
+  # not be found.
   def find_soap_body
-    envelope = self[self.keys.first] || {}
+    envelope = self[keys.first] || {}
     body_key = envelope.keys.find { |key| /.+:Body/ =~ key } rescue nil
     body_key ? envelope[body_key].map_soap_response : {}
   end
 
-  # Returns the Hash translated into SOAP request compatible XML.
+  # Translates the Hash into SOAP request compatible XML.
   #
-  # To control the order of output, add a key of :@inorder with
-  # the value being an Array listing keys in order.
+  # === Example:
   #
-  # === Examples
+  #   { :find_user => { :id => 123, "wsdl:Key" => "api" } }.to_soap_xml
+  #   # => "<findUser><id>123</id><wsdl:Key>api</wsdl:Key></findUser>"
   #
-  #   { :find_user => { :id => 666 } }.to_soap_xml
-  #   => "<findUser><id>666</id></findUser>"
+  # Comes with a way to control the order of XML tags in case you're foced to do so (parameterOrder).
+  # Specify an optional Array under the :order! key reflecting the order of your keys.
+  # An ArgumentError is raised unless the Array contains the exact same/all keys of your Hash.
   #
-  #   { :find_user => { :name => "Lucy", :id => 666, :@inorder => [:id, :name] } }.to_soap_xml
-  #   => "<findUser><id>666</id><name>Lucy</name></findUser>"
+  # === Example:
+  #
+  #   { :find_user => { :name => "Eve", :id => 123, :order! => [:id, :name] } }.to_soap_xml
+  #   # => "<findUser><id>123</id><name>Eve</name></findUser>"
+  #
+  # You can also specify attributes for XML tags by via an optional Hash under the :attributes! key.
+  #
+  # === Example:
+  #
+  #   { :find_user => { :person => "Eve", :attributes! => { :person => { :id => 123 } } } }
+  #   # => "<findUser><person id="123">Eve</person></findUser>"
   def to_soap_xml
-    @soap_xml = Builder::XmlMarkup.new
-    inorder(self).each { |key| nested_data_to_soap_xml key, self[key] }
-    @soap_xml.target!
+    xml = Builder::XmlMarkup.new
+    attributes = delete(:attributes!) || {}
+
+    order.each do |key|
+      attrs = attributes[key] || {}
+      value = self[key]
+      key = key.to_soap_key
+
+      case value
+        when Array then xml << value.to_soap_xml(key)
+        when Hash  then xml.tag!(key, attrs) { xml << value.to_soap_xml }
+        else            xml.tag!(key, attrs) { xml << value.to_soap_value }
+      end
+    end
+
+    xml.target!
   end
 
-  # Maps keys and values of a Hash created from SOAP response XML to
-  # more convenient Ruby Objects.
+  # Maps keys and values of a Hash created from SOAP response XML to more convenient Ruby Objects.
   def map_soap_response
     inject({}) do |hash, (key, value)|
-      key = key.strip_namespace.snakecase.to_sym
-
       value = case value
         when Hash   then value["xsi:nil"] ? nil : value.map_soap_response
         when Array  then value.map { |a_value| a_value.map_soap_response rescue a_value }
         when String then value.map_soap_response
       end
-      hash.merge key => value
+
+      hash.merge key.strip_namespace.snakecase.to_sym => value
     end
   end
 
 private
 
-  # Expects a Hash +key+ and +value+ and recursively creates an XML structure
-  # representing the Hash content.
-  def nested_data_to_soap_xml(key, value)
-    case value
-      when Array
-        value.map { |subitem| nested_data_to_soap_xml key, subitem }
-      when Hash
-        @soap_xml.tag!(key.to_soap_key) do
-          inorder(value).each { |subkey| nested_data_to_soap_xml subkey, value[subkey] }
-        end
-      else
-        @soap_xml.tag!(key.to_soap_key) { @soap_xml << value.to_soap_value }
-    end
-  end
+  # Deletes and returns an Array of keys stored under the :order! key. Defaults to return the actual
+  # keys of this Hash if no :order! key could be found. Raises an ArgumentError in case the :order!
+  # Array does not match the Hash keys.
+  def order
+    order = delete :order!
+    order = keys unless order.kind_of? Array
 
-  # Takes a +hash+, removes the :@inorder marker and returns its keys.
-  # Raises an error in case an :@inorder Array does not match the Hash keys.
-  def inorder(hash)
-    inorder = hash.delete :@inorder
-    hash_keys = hash.keys
-    inorder = hash_keys unless inorder.kind_of? Array
-    raise InOrderMissing % (hash_keys - inorder).inspect unless (hash_keys - inorder).empty?
-    raise InOrderSpurious % (inorder - hash_keys).inspect unless (inorder - hash_keys).empty?
-    inorder
+    missing, spurious = keys - order, order - keys
+    raise ArgumentError, "Missing elements in :order! #{missing.inspect}" unless missing.empty?
+    raise ArgumentError, "Spurious elements in :order! #{spurious.inspect}" unless spurious.empty?
+
+    order
   end
 
 end
