@@ -3,135 +3,166 @@ require "spec_helper"
 describe Hash do
 
   describe "find_soap_body" do
-    it "returns the content from the 'soap:Body' element" do
-      { "soap:Envelope" => { "soap:Body" => "content" } }.find_soap_body.should == "content"
+    it "should return the content from the 'soap:Body' element" do
+      soap_body = { "soap:Envelope" => { "soap:Body" => "content" } }
+      soap_body.find_soap_body.should == "content"
     end
 
-    it "returns an empty Hash in case the 'soap:Body' element could not be found" do
-      { "some_hash" => "content" }.find_soap_body.should == {}
+    it "should return an empty Hash in case the 'soap:Body' element could not be found" do
+      soap_body = { "some_hash" => "content" }
+      soap_body.find_soap_body.should == {}
     end
   end
 
   describe "to_soap_xml" do
-    describe "returns SOAP request compatible XML" do
+    describe "should return SOAP request compatible XML" do
       it "for a simple Hash" do
-        { :some => "user" }.to_soap_xml.should == "<some>user</some>"
+        hash, result = { :some => "user" }, "<some>user</some>"
+        hash.to_soap_xml.should == result
       end
 
       it "for a nested Hash" do
-        { :some => { :new => "user" } }.to_soap_xml.
-          should == "<some><new>user</new></some>"
+        hash, result = { :some => { :new => "user" } }, "<some><new>user</new></some>"
+        hash.to_soap_xml.should == result
       end
 
       it "for a Hash with multiple keys" do
-        soap_xml = { :all => "users", :before => "whatever" }.to_soap_xml
-
-        soap_xml.should include("<all>users</all>")
-        soap_xml.should include("<before>whatever</before>")
+        hash = { :all => "users", :before => "whatever" }
+        hash.to_soap_xml.should include("<all>users</all>", "<before>whatever</before>")
       end
 
       it "for a Hash containing an Array" do
-        { :some => ["user", "gorilla"] }.to_soap_xml.
-          should == "<some>user</some><some>gorilla</some>"
+        hash, result = { :some => ["user", "gorilla"] }, "<some>user</some><some>gorilla</some>"
+        hash.to_soap_xml.should == result
       end
 
       it "for a Hash containing an Array of Hashes" do
-        { :some => [{ :new => "user" }, { :old => "gorilla" }] }.to_soap_xml.
-          should == "<some><new>user</new></some><some><old>gorilla</old></some>"
+        hash = { :some => [{ :new => "user" }, { :old => "gorilla" }] }
+        result = "<some><new>user</new></some><some><old>gorilla</old></some>"
+
+        hash.to_soap_xml.should == result
       end
     end
 
-    it "converts Hash key Symbols to lowerCamelCase" do
-      { :find_or_create => "user" }.to_soap_xml.
-        should == "<findOrCreate>user</findOrCreate>"
+    it "should convert Hash key Symbols to lowerCamelCase" do
+      hash, result = { :find_or_create => "user" }, "<findOrCreate>user</findOrCreate>"
+      hash.to_soap_xml.should == result
     end
 
-    it "does not convert Hash key Strings" do
-      { "find_or_create" => "user" }.to_soap_xml.
-        should == "<find_or_create>user</find_or_create>"
+    it "should not convert Hash key Strings" do
+      hash, result = { "find_or_create" => "user" }, "<find_or_create>user</find_or_create>"
+      hash.to_soap_xml.should == result
     end
 
-    it "converts DateTime objects to xs:dateTime compliant Strings" do
-      { :before => DateTime.new(2012, 03, 22, 16, 22, 33) }.to_soap_xml.
-        should == "<before>" << "2012-03-22T16:22:33Z" << "</before>"
+    it "should convert DateTime objects to xs:dateTime compliant Strings" do
+      hash = { :before => DateTime.new(2012, 03, 22, 16, 22, 33) }
+      result = "<before>2012-03-22T16:22:33Z</before>"
+
+      hash.to_soap_xml.should == result
     end
 
-    it "converts Objects responding to to_datetime to xs:dateTime compliant Strings" do
+    it "should convert Objects responding to to_datetime to xs:dateTime compliant Strings" do
       singleton = Object.new
       def singleton.to_datetime
         DateTime.new(2012, 03, 22, 16, 22, 33)
       end
 
-      { :before => singleton }.to_soap_xml.
-        should == "<before>" << "2012-03-22T16:22:33Z" << "</before>"
+      hash, result = { :before => singleton }, "<before>2012-03-22T16:22:33Z</before>"
+      hash.to_soap_xml.should == result
     end
 
-    it "calls to_s on Strings even if they respond to to_datetime" do
+    it "should call to_s on Strings even if they respond to to_datetime" do
       object = "gorilla"
       object.expects(:to_s).returns object
       object.expects(:to_datetime).never
 
-      { :name => object }.to_soap_xml.should == "<name>gorilla</name>"
+      hash, result = { :name => object }, "<name>gorilla</name>"
+      hash.to_soap_xml.should == result
     end
 
-    it "call to_s on any other Object" do
+    it "should call to_s on any other Object" do
       [666, true, false, nil].each do |object|
         { :some => object }.to_soap_xml.should == "<some>#{object}</some>"
       end
     end
 
-    it "preserves the order of Hash keys and values specified through :@inorder" do
-      { :find_user => { :name => "Lucy", :id => 666, :@inorder => [:id, :name] } }.to_soap_xml.
-        should == "<findUser><id>666</id><name>Lucy</name></findUser>"
+    it "should preserve the order of Hash keys and values specified through :order!" do
+      hash = { :find_user => { :name => "Lucy", :id => 666, :order! => [:id, :name] } }
+      result = "<findUser><id>666</id><name>Lucy</name></findUser>"
+      hash.to_soap_xml.should == result
 
-      { :find_user => { :by_name => { :mname => "in the", :lname => "Sky", :fname => "Lucy",
-        :@inorder => [:fname, :mname, :lname] } } }.to_soap_xml. should ==
-        "<findUser><byName><fname>Lucy</fname><mname>in the</mname><lname>Sky</lname></byName></findUser>"
+      hash = { :find_user => { :mname => "in the", :lname => "Sky", :fname => "Lucy", :order! => [:fname, :mname, :lname] } }
+      result = "<findUser><fname>Lucy</fname><mname>in the</mname><lname>Sky</lname></findUser>"
+      hash.to_soap_xml.should == result
     end
 
-    it "raises an error if the :@inorder Array does not match the Hash keys" do
-      lambda { { :name => "Lucy", :id => 666, :@inorder => [:name] }.to_soap_xml }.
-        should raise_error(RuntimeError)
+    it "should raise an error if the :order! Array does not match the Hash keys" do
+      hash = { :name => "Lucy", :id => 666, :order! => [:name] }
+      lambda { hash.to_soap_xml }.should raise_error(ArgumentError)
 
-      lambda { { :by_name => { :name => "Lucy", :lname => "Sky", :@inorder => [:mname, :name] } }.to_soap_xml }.
-        should raise_error(RuntimeError)
+      hash = { :by_name => { :name => "Lucy", :lname => "Sky", :order! => [:mname, :name] } }
+      lambda { hash.to_soap_xml }.should raise_error(ArgumentError)
+    end
+
+    it "should add attributes to Hash keys specified through :attributes!" do
+      hash = { :find_user => { :person => "Lucy", :attributes! => { :person => { :id => 666 } } } }
+      result = '<findUser><person id="666">Lucy</person></findUser>'
+      hash.to_soap_xml.should == result
+
+      hash = { :find_user => { :person => "Lucy", :attributes! => { :person => { :id => 666, :city => "Hamburg" } } } }
+      soap_xml = hash.to_soap_xml
+      soap_xml.should include('id="666"', 'city="Hamburg"')
     end
   end
 
   describe "map_soap_response" do
-    it "converts Hash key Strings to snake_case Symbols" do
-      { "userResponse" => { "accountStatus" => "active" } }.map_soap_response.
-        should == { :user_response => { :account_status => "active" } }
+    it "should convert Hash key Strings to snake_case Symbols" do
+      soap_response = { "userResponse" => { "accountStatus" => "active" } }
+      result = { :user_response => { :account_status => "active" } }
+
+      soap_response.map_soap_response.should == result
     end
 
-    it "strips namespaces from Hash keys" do
-      { "ns:userResponse" => { "ns2:id" => "666" } }.map_soap_response.
-        should == { :user_response => { :id => "666" } }
+    it "should strip namespaces from Hash keys" do
+      soap_response = { "ns:userResponse" => { "ns2:id" => "666" } }
+      result = { :user_response => { :id => "666" } }
+
+      soap_response.map_soap_response.should == result
     end
 
-    it "converts Hash keys and values in Arrays" do
-      { "response" => [{ "name" => "dude" }, { "name" => "gorilla" }] }.map_soap_response.
-        should == { :response=> [{ :name => "dude" }, { :name => "gorilla" }] }
+    it "should convert Hash keys and values in Arrays" do
+      soap_response = { "response" => [{ "name" => "dude" }, { "name" => "gorilla" }] }
+      result = { :response=> [{ :name => "dude" }, { :name => "gorilla" }] }
+
+      soap_response.map_soap_response.should == result
     end
 
-    it "converts xsi:nil values to nil Objects" do
-      { "userResponse" => { "xsi:nil" => "true" } }.map_soap_response.
-        should == { :user_response => nil }
+    it "should convert xsi:nil values to nil Objects" do
+      soap_response = { "userResponse" => { "xsi:nil" => "true" } }
+      result = { :user_response => nil }
+
+      soap_response.map_soap_response.should == result
     end
 
-    it "converts Hash values matching the xs:dateTime format into DateTime Objects" do
-      { "response" => { "at" => "2012-03-22T16:22:33" } }.map_soap_response.
-        should == { :response => { :at => DateTime.new(2012, 03, 22, 16, 22, 33) } }
+    it "should convert Hash values matching the xs:dateTime format into DateTime Objects" do
+      soap_response = { "response" => { "at" => "2012-03-22T16:22:33" } }
+      result = { :response => { :at => DateTime.new(2012, 03, 22, 16, 22, 33) } }
+
+      soap_response.map_soap_response.should == result
     end
 
-    it "converts Hash values matching 'true' to TrueClass" do
-      { "response" => { "active" => "false" } }.map_soap_response.
-        should == { :response => { :active => false } }
+    it "should convert Hash values matching 'true' to TrueClass" do
+      soap_response = { "response" => { "active" => "false" } }
+      result = { :response => { :active => false } }
+
+      soap_response.map_soap_response.should == result
     end
 
-    it "converts Hash values matching 'false' to FalseClass" do
-      { "response" => { "active" => "true" } }.map_soap_response.
-        should == { :response => { :active => true } }
+    it "should convert Hash values matching 'false' to FalseClass" do
+      soap_response = { "response" => { "active" => "true" } }
+      result = { :response => { :active => true } }
+
+      soap_response.map_soap_response.should == result
     end
   end
 
