@@ -1,6 +1,7 @@
 == 0.7.5 (UPCOMING)
   * Fix for issue #34 (soap_actions returns empty for wsdl12).
   * Fix for issue #36 (Custom WSDL actions broken).
+  * Added feature requested in issue #35 (Setting an attribute on an element?).
 
 == 0.7.4 (2010-02-02)
   * Fix for issue #33 (undefined method 'start_with?').
@@ -141,3 +142,4 @@
 
 == 0.5.0 (2009-11-29)
   * Complete rewrite.
+
